// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The counter compponent Should contains 2 Button components as children 1`] = `
<Counter>
  <div
    className="container"
  >
    <div
      className="form-group"
    >
      <div
        className="col-md-12"
      >
        <div
          className="row"
        >
          <div
            className="offset-md-2 col-md-8"
          >
            <Input
              errors={Array []}
              label="Counter"
              name="counter"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value={0}
            >
              <div
                className="form-group "
              >
                <label
                  className="form-control-label"
                  htmlFor="counter"
                >
                  Counter
                </label>
                <input
                  className="form-control "
                  name="counter"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text"
                  value={0}
                />
              </div>
            </Input>
            <br />
            <p>
              Current counter is: 
              0
            </p>
          </div>
          <div
            className="offset-md-2 col-md-8"
          >
            <Button
              btnClasses="btn-primary"
              label="Increment"
              onClick={[Function]}
            >
              <button
                className="btn btn-primary"
                onClick={[Function]}
              >
                Increment
              </button>
            </Button>
             
            <Button
              btnClasses="btn-warning"
              label="Decrement"
              onClick={[Function]}
            >
              <button
                className="btn btn-warning"
                onClick={[Function]}
              >
                Decrement
              </button>
            </Button>
          </div>
        </div>
      </div>
    </div>
  </div>
</Counter>
`;

exports[`The counter compponent Should render properly 1`] = `
<div
  className="container"
>
  <div
    className="form-group"
  >
    <div
      className="col-md-12"
    >
      <div
        className="row"
      >
        <div
          className="offset-md-2 col-md-8"
        >
          <Input
            errors={Array []}
            label="Counter"
            name="counter"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value={0}
          />
          <br />
          <p>
            Current counter is: 
            0
          </p>
        </div>
        <div
          className="offset-md-2 col-md-8"
        >
          <Button
            btnClasses="btn-primary"
            label="Increment"
            onClick={[Function]}
          />
           
          <Button
            btnClasses="btn-warning"
            label="Decrement"
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
